--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta http-equiv="refresh" content="0; url=/" />
     <script>
         var pathname = window.location.pathname;
-        window.location.replace("/?" + pathname);
+        window.location.replace("/shop/?" + pathname);
     </script>
 </head>
 <body>
