--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
         // Store the path in sessionStorage so it can be restored
         sessionStorage.setItem("redirectPath", pathname);
 
-        // Redirect to the homepage where the script will restore the path
+        // Redirect to the homepage where the script will restore the path test
         window.location.replace("/shop/");
     </script>
 </head>
