--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <title>Page Not Found</title>
     <script>
         // Redirect to the home page (index.html)
-        window.location.replace("/");  // Adjust to '/' or the homepage URL as needed
+        window.location.replace("/shop/");  // Adjust to '/' or the homepage URL as needed
     </script>
 </head>
 <body>
